--- a/TutorialsObjectiveC/Base.lproj/Main.storyboard
+++ b/TutorialsObjectiveC/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,93 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KOo-02-hcm">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="83"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="83" id="Qro-Oh-rqN"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="76" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lDH-yu-vmq">
+                                <rect key="frame" x="16" y="38" width="343" height="629"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="76" id="cVv-At-MGm" customClass="VideoCell">
+                                        <rect key="frame" x="0.0" y="28" width="343" height="76"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cVv-At-MGm" id="sxL-bC-93P">
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="76"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V2M-2Z-odv">
+                                                    <rect key="frame" x="8" y="8" width="327" height="59.5"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RFz-Vu-mLL">
+                                                            <rect key="frame" x="8" y="8" width="82" height="43.5"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="82" id="5kQ-hH-Rum"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mx1-Ly-TYz">
+                                                            <rect key="frame" x="98" y="8" width="221" height="14.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tyA-2E-Rrv">
+                                                            <rect key="frame" x="98" y="30" width="221" height="21"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstItem="RFz-Vu-mLL" firstAttribute="top" secondItem="V2M-2Z-odv" secondAttribute="top" constant="8" id="884-y5-JKw"/>
+                                                        <constraint firstAttribute="bottom" secondItem="RFz-Vu-mLL" secondAttribute="bottom" constant="8" id="JFb-WO-ped"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Mx1-Ly-TYz" secondAttribute="trailing" constant="8" id="aR6-vL-mA6"/>
+                                                        <constraint firstItem="RFz-Vu-mLL" firstAttribute="leading" secondItem="V2M-2Z-odv" secondAttribute="leading" constant="8" id="k8Z-oE-SU5"/>
+                                                        <constraint firstItem="Mx1-Ly-TYz" firstAttribute="leading" secondItem="RFz-Vu-mLL" secondAttribute="trailing" constant="8" id="qas-xD-37G"/>
+                                                        <constraint firstItem="Mx1-Ly-TYz" firstAttribute="top" secondItem="V2M-2Z-odv" secondAttribute="top" constant="8" id="wKn-6F-ZIo"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="V2M-2Z-odv" firstAttribute="top" secondItem="sxL-bC-93P" secondAttribute="topMargin" id="0cW-Sv-oiU"/>
+                                                <constraint firstItem="V2M-2Z-odv" firstAttribute="leading" secondItem="sxL-bC-93P" secondAttribute="leadingMargin" id="DGG-kb-Pmt"/>
+                                                <constraint firstItem="V2M-2Z-odv" firstAttribute="trailing" secondItem="sxL-bC-93P" secondAttribute="trailingMargin" id="OEF-qE-fhu"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="V2M-2Z-odv" secondAttribute="bottom" id="nlx-oC-DPD"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="cellView" destination="V2M-2Z-odv" id="92n-8y-TRg"/>
+                                            <outlet property="descriptionLabel" destination="tyA-2E-Rrv" id="Xsk-RC-qPH"/>
+                                            <outlet property="thumbnailImage" destination="RFz-Vu-mLL" id="bpM-ec-Rwd"/>
+                                            <outlet property="titleLabel" destination="Mx1-Ly-TYz" id="BNY-KY-5FA"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="lDH-yu-vmq" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="18" id="8OL-FD-uJ5"/>
+                            <constraint firstItem="KOo-02-hcm" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="A4C-9g-Nnz"/>
+                            <constraint firstItem="lDH-yu-vmq" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="PqD-Nt-tlD"/>
+                            <constraint firstAttribute="trailing" secondItem="KOo-02-hcm" secondAttribute="trailing" id="Vys-t0-CF9"/>
+                            <constraint firstItem="lDH-yu-vmq" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="ujG-ZO-P0c"/>
+                            <constraint firstItem="KOo-02-hcm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="xPB-fk-0rW"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="lDH-yu-vmq" secondAttribute="bottom" id="yij-uy-Jx6"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="122.78860569715144"/>
         </scene>
     </scenes>
 </document>
